--- a/CSharp/基础.md
+++ b/CSharp/基础.md
@@ -3,3 +3,66 @@ Convert 类用于做各种基本数据类型的转换
 使用 @"" 引用一个绝对字符串
 
 var 自动类型推断
+
+浅复制
+```
+class A
+{
+    public int[] Age { get; set; }
+
+    public A clone()
+    {
+        return (A)this.MemberwiseClone();
+    }
+}
+
+class Program
+{
+    static void Main(string[] args)
+    {
+        A a = new A();
+        a.Age = new [] { 3 };
+        A a2 = a.clone();
+        Console.Out.WriteLine(a.Age[0]);
+        Console.Out.WriteLine(a2.Age[0]);
+        a2.Age[0] = 4;
+        Console.Out.WriteLine(a.Age[0]);
+        Console.Out.WriteLine(a2.Age[0]);
+    }
+}
+```
+
+
+# 可空类型 #
+int? a;
+a.HasValue
+a.Value
+
+可空类型参与的计算结果也是一个可空类型
+int b=a*2; 编译错误
+int? b=a*2; 成功
+int c= a*2??5; 成功
+
+
+# ??运算符 #
+判断变量是否为null
+
+# 重载运算符 #
+一般情况下还真的用不到, 习惯java风格
+
+# 变体 #
+把儿子赋值给父亲的引用是OK的
+但这不适用于泛型的情况, 比如 假设B是A的子类
+List<A> a = new List<B>(); 是错的
+
+协变
+使得一个子类泛型可以被赋值给父类泛型
+只作用于返回值
+例子:
+有一个方法可以对IEnumreate<A>进行遍历
+所有A的子类的List都可以传进来
+
+抗变
+只作用于方法的参数
+对所有A的对象进行排序
+
