--- a/Database/MySQL/函数积累.md
+++ b/Database/MySQL/函数积累.md
@@ -12,11 +12,12 @@ bit_count
 TIMESTAMPDIFF(单位,日期1,日期2) 计算两个日期之间的差距(以提供的单位作为单位)
 timestampdiff(year,birthday,current_date()) 计算某人的当前岁数
 
-CURDATE CURRENT_DATE() 当前的日期
+CURRENT_DATE CURDATE() CURRENT_DATE() 当前的日期
 YEAR MONTH DAYOFMONTH 用于从date类型里抽取出相关字段
 DATE_ADD(起始时间, INTERVAL 数量 单位)
 date_sub()
 date_add(curdate(), interval 1 day); 明天的日期
+SELECT date_add(current_date(), interval 3 day); 3天后的日期
 
 month(date) 获取月份
 dayofmonth(date) 获取天
@@ -37,4 +38,4 @@ encode(要加密的数据,password),decode(要解密的数据,password) 用passw
 
 # 杂 #
 cast(原始值 as 新类型)
- 
+ifnull(字段1, 默认值)
