--- a/Programming Language/Python/虚拟环境.md
+++ b/Programming Language/Python/虚拟环境.md
@@ -1,3 +1,5 @@
+windows的姥爷请安装 pip install virtualenvwrapper-win
+
 pip3 install virtualenv virtualenvwrapper
 
 参考
@@ -18,7 +20,7 @@ python = /opt/python-3.3/bin/python
 ```
 
 ## 创建新环境 ##
-virtualenv venv 在当前目录下创建一个虚拟环境 名字叫做venv
+virtualenv venv 在家目录下创建一个目录 名字叫做venv
 
 常用参数
 -p 某个python.exe的路径 处理多版本问题
@@ -26,6 +28,7 @@ virtualenv venv 在当前目录下创建一个虚拟环境 名字叫做venv
 ## 激活该环境 ##
 只对当前shell有效
 
+通过执行刚才创建的那个目录下的 scripts/activate 或 bin/active 文件就可以切换到该环境
 linux: source venv/bin/activate
 windows: 执行 venv\scripts\activate.bat
 
@@ -48,7 +51,10 @@ print(bs4)
 你必须执行 pip install bs4
 
 ## 取消激活 ##
-deactivate
+执行你刚才创建的那个目录里的 deactivate 就行, 很麻烦对吧?
+
+## 删除环境 ##
+直接将目录删掉就行
 
 
 建立一个 requirements.txt:
@@ -125,3 +131,29 @@ source /usr/local/bin/virtualenvwrapper.sh
 在windows上似乎只需要设置环境变量就行了
 
 当 mkvirtualenv 执行成功之后 $WORKON_HOME/postmkvirtualenv 这个脚本会自动执行
+
+如果你是多版本的 python, 那么需要指定
+VIRTUALENVWRAPPER_PYTHON
+
+# 从0开始 #
+1. 安装python3
+2. pip3 install virtualenv virtualenvwrapper
+3. 
+```
+在/etc/bash.bashrc 的末尾
+export VIRTUALENVWRAPPER_PYTHON=/usr/bin/python3
+export WORKON_HOME=$HOME/Envs
+export PROJECT_HOME=$HOME/Projects
+source /usr/local/bin/virtualenvwrapper.sh
+```
+4. 注销重新登录 或 重新加载脚本
+5. mkvirtualenv test1 打这句话的时候是有代码提示的, 此时你也切换到了test1环境了
+6. pip3 install requests 在这个环境里安装 requests 库
+7. 写个 1.py
+```
+#!/usr/bin/env python
+import requests as req
+print(req.get('https://www.baidu.com').text)
+```
+8. chmod a+x ./1.py
+9. ./1.py
