--- a/Programming Language/Python/文件操作.md
+++ b/Programming Language/Python/文件操作.md
@@ -30,3 +30,20 @@ with open('a.txt','r') as fin:
 	for line in fin:...
 
 print('...',end='')
+
+删除 unlink remove
+删除目录 rmdir
+removedirs
+
+重命名 rename renames
+sync
+truncate 截断
+
+
+# 遍历目录 #
+walk
+os.scandir
+## DirEntry  ##
+name path
+inode stat
+is_dir is_file is_symlink
