--- a/Java/Lib/Apache/httpclient/笔记.md
+++ b/Java/Lib/Apache/httpclient/笔记.md
@@ -5,3 +5,63 @@ new URIBuilder()
 
 HttpClientContext clientContext = HttpClientContext.adapt(context);
 
+HC发一次请求的详细过程
+
+hc.execute(hur);
+决定config
+决定route
+执行链
+	重定向
+	重试
+	协议
+		执行拦截器
+	MainClientExec
+		获得连接
+			以route为key找是否有可重用的连接
+	HttpRequestExecutor
+
+
+free
+最大
+已分配
+已经使用的
+可用的
+
+maxPerRoute
+
+pool
+	如果已经分配的超过 maxPerRoute 那么就关闭最旧的几个
+
+
+
+已分配 < 最大
+	如果允许创建连接(即 已经使用的 < 最大)
+
+创建连接, 加入到池, ++已经使用的
+
+借到对象之后, 进行验证 validateAfterInactivity
+	对象的最后更新时间 + validateAfterInactivity <= 当前时间 则认为是需要验证
+	如果验证失败的话, 那么会关闭这个连接 重新获得一个
+
+
+
+Response的Entity一定要消费掉, 否则即使这个Response被close, 它对应的流也不会被关闭, 导致无法重新利用该连接, 如果能够理解keep-alive机制, 那么就比较好理解注意点了.
+
+总之, response的entity一定要消费掉, 然后再将response关闭掉, 这样你的控制连接数才会生效. 如果你只关闭response, 却没有关闭它的entity, 那么当你限制最大只有2个连接, 并发发送了16个请求, 使用netstat 你会看到其实打开了16个socket, 这是因为无法重复利用现有的连接, 导致连接池将坏掉的连接剔除,并且创建新连接, 而剔除之后是需要等待一段时间这个连接才会因为超时而关闭的,所以你会看到有16个socket.
+
+
+# 异步版本 #
+构建的时候很多的概念都是一样的, 但是多了更多异步相关的概念
+需要先start再使用
+执行之后返回的是一个Future, 不像Guava里的ListenableFuture, 使用起来不是很方便
+
+常用的类
+HttpAsyncClients
+HttpAsyncMethods
+AsyncCharConsumer
+CountDownLatch
+
+BasicClientCookie
+HttpClientContext
+
+HttpResponse
