--- a/Other/gpg/笔记.md
+++ b/Other/gpg/笔记.md
@@ -1,6 +1,19 @@
+# 记住几点
+
+公钥加密, 私钥解密
+
+私钥签名, 公钥验证
+
+
+
+为什么不私钥加密, 因为你的公钥是公开的, 所有人都能解开.
+
+
+
 # 常见参数 #
--o 输出文件
--a 字符形式 而不是二进制
+
+-o/--output 输出文件
+-a/--armor 字符形式 而不是二进制
 -u 指定本地的用户
 -r 指定接收者
 
@@ -29,33 +42,92 @@ gpg --list-secret-keys
 
 # 导出公钥 #
 gpg -o output.txt --export [UID]
--o 或 --output 注意要放在 export 之前
--a 以 文本的形式输出 默认是二进制
+-o/--output 注意要放在 export 之前
+-a/--armor 以 文本的形式输出 默认是二进制
+
+
+
+gpg -a -o xzchaoo.pub --export xzchaoo
+
+导出的内容如下:
+
+```
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: GnuPG v1
+
+...
+-----END PGP PUBLIC KEY BLOCK-----
+
+```
+
+如果没有 -a 参数的话 那么导出的就是二进制格式了
+
+# 导出密钥
+
+gpg -a -o xzchaoo.pri --export-secret-keys
+
+
 
 # 导入公钥 #
+
 gpg --import FILENAME
 
-# gen-key #
+# gen-key 生成密钥对 #
 gpg --gen-key
 1. 选择 RSA and RSA
 2. 长度2048
 3. 过期1年
 4. 创建如下两个钥匙对 
-	1. zhangsan zhangsan@qq.com zhangsan zhangsan123
-	2. lisii lisii@qq.com lisii lisii123 (因为名字最短5位 所以是 lisii)
+   1. zhangsan zhangsan@qq.com zhangsan zhangsan123
+   2. lisii lisii@qq.com lisii lisii123 (因为名字最短5位 所以是 lisii)
+
+
+生词生成一个整数都会产生一个类似"EDDD6D76"的字符串, 这是"用户ID"的哈希
+
+
+
+# 删除key
+
+删除私钥
+
+gpg --delete-key [用户ID]
+
+
+
+删除私钥
+
+gpg --delete-key --delete-secret-keys [用户id]
+
+
+
+如果要删除一个key对, 那么要先删除私钥再删除公钥
+
 
 
 # 取消钥匙 #
+
 gpg --gen-revoke 用户
 利用上面的命令可以产生一份取消钥匙的整数 利用这个证书就可以取消你的钥匙 所以要保存好
 但是生成这个整数的时候需要私钥, 所以建议在生成公钥私钥的时候就产生一份这个
+
+命令执行完毕之后, 会打印出一堆文本, 好好保存那堆文本, 以后取消的时候会用到.
+
+
 
 -u/--local-user UID
 -r/--recipient
 
 
+
+# 上传公钥
+
+将你的公钥上传到某台公钥服务器上, 然后它会慢慢传播给其他服务器
+
+
+
 # 加密 #
-gpg -r 用户 -e [file]
+
+gpg -r 用户 -e [file] -o encrypted.txt
 
 -r 用户表示 接受者, 所以你会以该人的公钥进行加密
 
@@ -66,10 +138,24 @@ gpg -o 1.txt -d 1.txt.gpg
 因为加密者的信息已经在文件里了, 所以会自动选择相应的私钥进行解密
 
 
+
+
 # 签名 #
 签名方使用自己的密钥进行签名
 
 -s/--sign
+
+gpg -s demo.txt
+
+会产生 demo.txt.gpg 这个文件, 格式是二进制的这是签名之后的文件, 原本的内容和签名混在一起了
+
+gpg --clearsign demo.txt
+
+会生成demo.txt.asc 文本类型
+
+gpg --detach-sign demo.txt 生成分离的签名文件
+
+gpg --armor --detach-sign demo.txt
 
 # 验证 #
 验证方需要有签名方的公钥
@@ -103,10 +189,6 @@ gpg -o 1.txt -d 1.txt.data.asc 解密数据
 gpg --veiry 1.txt.asc 验证签名, 它会假设数据在1.txt里
 
 
-
-
-
-
 gpg --recipient [用户ID] --output demo.en.txt --encrypt demo.txt
 
 gpg --decrypt demo.en.txt --output demo.de.txt
@@ -117,4 +199,23 @@ gpg --clearsign demo.txt
 
 gpg --local-user [发信者ID] --recipient [接收者ID] --armor --sign --encrypt demo.txt
 
+
+
+## 张三加密, 李四解密
+
+张三需要有李四的公钥, 李四需要有自己的私钥
+
+张三: gpg -o 1.txt.en -r lisii --encrypt 1.txt
+
+李四: gpg -o 2.txt --decrypt 1.txt.en
+
+
+
+## 张三签名, 李四验证
+
+张三需要有自己的密钥, 李四需要有张三的公钥
+
+张三: gpg -u zhangsan -o 1.txt.signed -s 1.txt
+
+李四: gpg -v 1.txt.signed
 
