--- a/Java/J2EE/Spring/SpringMVC/22.视图渲染.md
+++ b/Java/J2EE/Spring/SpringMVC/22.视图渲染.md
@@ -1,3 +1,37 @@
+视图需要实现 View 接口
+实现 getContentType 和 render 方法
+
+```
+render(model, request, response)
+```
+
+# AbstractView #
+静态属性
+private final Map<String, Object> staticAttributes;
+
+一些开关
+是否添加路径变量到模型中
+
+render的实现:
+1. 合并, 产生出最后的模型, 模型的组成:
+	1. 静态属性
+	2. 路径变量, 如果启动
+	3. 用户返回的模型
+	4. RequestContext
+2. 准备渲染
+	1. 在这里准备一些特殊的http头
+3. 利用模型进行渲染
+	1. 
+
+
+注意
+spring mvc 将 path 变量放到request 的 View.PATH_VARIABLES 属性
+
+
+
+
+
+
 由于我经常使用的是 jsp 和 freemarker , 因此只会介绍这两种技术.
 # spring 标签库 #
 ## http://www.springframework.org/tags ##
