--- a/CSharp/常用集合类.md
+++ b/CSharp/常用集合类.md
@@ -12,9 +12,8 @@ foreach(var e in dict){
 }
 ```
 
-dict的get方法必须要用 TryGetValue
-因为泛类型可能是基本数据类型 所以不能像java一样返回包装类型
-dict[key] 注意key不存在的时候会抛异常哦, 赋值的时候除外
+dict的get方法必须要用 TryGetValue 因为泛类型可能是基本数据类型 所以不能像java一样返回包装类型
+dict[key] 注意key不存在的时候会抛异常, 赋值的时候除外
 
 Add/AddRange
 Remove/RemoveAt/RemoveAll/RemoveRange(offset,count)
@@ -29,3 +28,9 @@ while (e.MoveNext())
     Console.Out.WriteLine(c);
 }
 ```
+
+
+# ConcurrentDictionary #
+跟java里的ConcurrentHashMap类似
+GetOrAdd(key, key0=>{...});
+
