--- a/CSharp/异步.md
+++ b/CSharp/异步.md
@@ -50,3 +50,31 @@ task.ContinueWith() 异步继续任务
 
 Task.WaitAll()
 Task.WaitAny()
+
+# async/await #
+发现真的挺好用
+
+```
+public async Task<object[]> Search(RequestModel rqeuest)
+{
+    var task1 = aggClient.CreateAsyncTaskOfSearch(ConvertToSearchRequestType(rqeuest));
+    var task2 = amadeusClient.CreateAsyncTaskOfIntlFlight(ConvertToRequestShell(rqeuest));
+
+    //注意这里需要手动启动
+    task1.Start();
+    task2.Start();
+
+    Console.Out.WriteLine("分裂成两个异步请求 task1 task2");
+    var r1 = await task1;
+    var r2 = await task2;
+    return new object[] { r1, r2 };
+}
+```
+上面的例子是将请求分裂成2个异步请求, 然后等待两个请求执行完毕, 将结果合并成1个结果, 然后返回
+这里不考虑错误处理
+
+由于Task<T> 和 Task 是不一样的
+如果不用 async/await 的话处理起来貌似很麻烦
+
+使用 async/await 之后语义清晰了很多
+
