--- a/Web/webpack/笔记.md
+++ b/Web/webpack/笔记.md
@@ -1,3 +1,94 @@
+# 概念
+
+## Entry
+
+https://webpack.js.org/concepts/entry-points/
+
+程序执行入口, 入度为0, 是一个字符串或字符串数组或对象, 推荐使用对象
+
+用对象可以配置支持多页面程序
+
+还可以抽取出第三方的依赖, 和 `CommonsChunkPlugin`  配合使用
+
+## Output
+
+https://webpack.js.org/concepts/output/
+
+最后打包后的输出
+
+一些占位符
+
+[id]
+
+[name]
+
+[hash] 对整个编译的一个hash
+
+[chunkhash] 对每个文件的一个hash
+
+
+
+## Loaders
+
+https://webpack.js.org/concepts/loaders/
+
+常见的loaders
+
+json style css sass less html babel
+
+webpack2 之后 自动支持json(无需配置)
+
+
+
+npm install --save-dev style-loader css-loader
+
+
+
+```javascript
+module: {
+   rules: [
+      {
+         test: /\.css$/,
+         use: [
+            {loader: 'style-loader'},
+            {
+               loader: 'css-loader',
+               options: {
+                  modules: true,
+               }
+            }
+         ]
+      }
+   ]
+}
+```
+
+
+
+用于加载各种资源
+
+Plugins 增强功能
+
+
+
+
+
+# 开始
+
+配置放在 ``webpack.config.js`` 这里
+
+
+
+## 常见配置
+
+
+
+
+
+# 配置说明
+
+entry: 指定入口点
+
 npm install --save-dev webpack-dev-server
 
 webpack-dev-server支持两种方式来刷新页面
@@ -12,7 +103,72 @@ http://«host»:«port»/webpack-dev-server/«path»
 inline
 需要 --inline 参数 并且 在 webpack.config.js 的配置 devServer:{inline:true}
 
+
+
+# 发时
+
+## webpack-dev-server
+
+https://webpack.js.org/configuration/dev-server/
+
+1. npm install --save-dev webpack-dev-server
+
+2. 在 ``webpack.config.js`` 里做配置
+
+   1. ```javascript
+      devServer: {
+        contentBase: path.join(__dirname, "dist"),
+        compress: true,
+        port: 9000
+      }
+      ```
+
+   2. 常见配置:
+
+      1. port 端口
+      2. compress 是否gzip压缩
+      3. contentBase 根目录
+      4. filename lazy模式相关
+      5. headers 设置额外的头
+      6. historyApiFallback 用于重写url
+      7. hot 是否支持热模块替换 需要加载插件
+
+   3. 仅支持命令行的配置
+
+      1. host
+      2. inline 进入inline模式
+      3. ​
+
+## 其他
+
+devtool:"cheap-eval-source-map"
+
+
+
+
+
+
+
+# 部署时
+
+https://webpack.js.org/guides/production-build/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # 代码拆分 #
+
 https://webpack.js.org/guides/code-splitting/
 1. 按需加载
 2. 更小bundle
@@ -21,7 +177,20 @@ https://webpack.js.org/guides/code-splitting/
 CommonsChunkPlugin
 https://webpack.js.org/guides/code-splitting-libraries/
 
+拆分注意
+
+如果只拆成vendor和自己的app可能不够
+
+因为, vendor里会包含webpack动态生成的一些东西, 比如app的chunkhash, 一旦你的app变了, chunkhash也变了, 而chunkhash默认是放到了第一个模块里, 也就是vendor, 这会导致整个vendor都变了
+
+解决方案是再引入一个js用于存放webpack生成的动态代码, 整个文件比较小, 只有几个kb。
+
+
+
 ## css拆分 ##
+
+https://webpack.js.org/guides/code-splitting-css/
+
 ExtractTextWebpackPlugin
 
 ## 按需代码拆分 ##
