--- a/Java/J2EE/Spring/官方文档笔记/25.WebSocket.md
+++ b/Java/J2EE/Spring/官方文档笔记/25.WebSocket.md
@@ -1,3 +1,22 @@
+# HandshakeInterceptor #
+处理握手
+
+HttpSessionHandshakeInterceptor 可以用于复制握手时对应的 HttpSession 里的属性
+它是在before阶段里做的
+
+```
+@Configuration
+@EnableWebSocket
+public class WebSocketConfig implements WebSocketConfigurer {
+	@Override
+	public void registerWebSocketHandlers(WebSocketHandlerRegistry registry) {
+		registry.addHandler(new MyHandler(), "/myHandler")
+			.addInterceptors(new HttpSessionHandshakeInterceptor());
+	}
+}
+```
+
+
 http的session和websocket的session是没有关系的, 因此可能前者已经过期了, 后者还是可用的.
 如果想在httpsession销毁的时候, 让websocket的session也跟着销毁, 可以这样:
 利用 HttpSessionBindingListener, 在 modifiedHandshake 里 先把 httpsession 放到 userProperties 里
@@ -21,6 +40,41 @@ Simple Broker
 接受客户端的订阅信息, 将他们保存在内存里, 广播哪些匹配路径表达式的客户端
 
 # STOMP #
+建立在ws之上的一套协议, 模仿http协议, 有 header body 的概念
+客户端可以发送 send 或 subscribe 到一个端点, 即 发送消息 和 订阅消息, 这样就实现了一个简单的消息推送功能
+
+spring程序会作为broker, 收到的消息被
+1. 传递给 @Controller 的方法, 做完处理之后, 由你的程序决定将该消息发送给哪些session
+2. 直接扔给你一个内存级别的broker
+3. RabbitMQ ActiveMQ
+	1. 此时spring再次作为一个中转
+
+## 使用stomp的好处 ##
+1. 类似http协议, 已经具备一定的消息格式了
+2. 客户单有 stomp.js 的支持
+3. 具有和消息服务一样的路由功能, 一对多 一对一
+4. 
+
+## SUBSCRIBE ##
+id destination
+
+## SEND ##
+SEND
+destionation:/queue/trade
+content-type:application/json
+content-length:44
+
+{你的json消息}
+
+## MESSAGE ##
+MESSAGE
+message-id:消息的id
+subscription:TODO
+destination:/topic/sdfsdfsddsfd
+
+/queue/* 一对一
+/topic/* 一对多
+
 带宽使用更少
 send()
 一帧由 command headers body 组成
