--- a/Java/eureka/笔记.md
+++ b/Java/eureka/笔记.md
@@ -31,9 +31,9 @@ http://cloud.spring.io/spring-cloud-netflix/
 
 0. SpringBoot提供了健康检查器(HealthIndicator, 简称HI), 用于体现当前应用的健康情况
 1. 启动spring对eureka的健康检查支持, 它会添加一个eureka相关的HI (简称EHI), 和一个callback. 
-	1. EHI是定期更新的, 因此跟server上的状态会有很大的差距
+   1. EHI是定期更新的, 因此跟server上的状态会有很大的差距
 2. 这个callback会被定期调用, 目前还不知道如何设定它的频率.
-	1. 它会以除了EHI外的所有的HI的状态来决定该实例的状态.
+   1. 它会以除了EHI外的所有的HI的状态来决定该实例的状态.
 3. 自己随便新增一个HI(简称MHI), 然后暴露一些接口, 用于控制该HI的UP/DOWN. 初始化为DOWN
 4. 由于MHI状态是DOWN, 根据 2.1 此时实例的状态不是UP
 5. 当你认为程序已经准备好接收请求了, 就将MHI的状态设置为UP(通过你暴露的接口)
@@ -48,17 +48,17 @@ http://cloud.spring.io/spring-cloud-netflix/
 5. DOWN -> UP 也是同理
 6. 得找找办法降低反应所需要的时间
 7. 将服务的状态设置为 out_of_service 之后, 它就一直为 out_of_service 了, 无论我怎么up它都还是out_of_service. 但是down状态的话就不会出现这种情况
-	1. 找到解决方法了, out_of_service 必须先变成 down, 然后再变成up才行.
-	2. 竟然还有这种规定!!!
+   1. 找到解决方法了, out_of_service 必须先变成 down, 然后再变成up才行.
+   2. 竟然还有这种规定!!!
 
 # 未解的问题 #
 1. eureka-server 有一个 Renews threshold	和 Renews (last min)的概念, 现在对它还不是太懂, 导致当右服务生产者挂掉的时候, eureka-server 进入自我保护模式, 此时它不会移除实际上已经挂掉的服务器, 在非自我保护模式的时候, 一旦90秒没有心跳就自动移除, 不过现在就是一直僵死在那了.
-	1. 这样会导致客户端拿到实际上已经挂掉的服务的url, 调用的时候就会出现超时的情况, 客户端只能fallback或重试.
-	2. 似乎可以通过禁用 自我保护模式来解决这个问题  enableSelfPreservation: false
-	3. 测试中发现 Renews threshold = 曾经拥有过的服务数量 *2, 即使一个服务起来之后, 又挂了, 但它贡献的2依旧存在, 如果本来有5个服务, 那么他是10, 然后5个服务全挂了, 它还是10, 又有5个新的服务起来了, 它变成20
-	4. Renews (last min) 总是等于当前存活的服务数量 * 2
-	5. 后来测试过程中又发现 Renews threshold	= 0 坑了 ... 不知道为什么 
-	6. **目前的解决方法**, eureka.server.enableSelfPreservation=false, 
+   1. 这样会导致客户端拿到实际上已经挂掉的服务的url, 调用的时候就会出现超时的情况, 客户端只能fallback或重试.
+   2. 似乎可以通过禁用 自我保护模式来解决这个问题  enableSelfPreservation: false
+   3. 测试中发现 Renews threshold = 曾经拥有过的服务数量 *2, 即使一个服务起来之后, 又挂了, 但它贡献的2依旧存在, 如果本来有5个服务, 那么他是10, 然后5个服务全挂了, 它还是10, 又有5个新的服务起来了, 它变成20
+   4. Renews (last min) 总是等于当前存活的服务数量 * 2
+      5. 后来测试过程中又发现 Renews threshold= 0 坑了 ... 不知道为什么 
+   5. **目前的解决方法**, eureka.server.enableSelfPreservation=false, 
 2. 另外server高可用的问题似乎还没有解决, 建议在这个问题解决之前, 不要大规模使用. 坑太深.
 3. 另外有些值"可以改, 但又不能改", 比如客户端发心跳的频率, 因为目前服务端似乎认为客户端一定是每30秒发心跳的, 一旦客户端的频率变了, 服务端也要跟着变化, 而且所有的客户端的频率都要一致...
 
@@ -67,9 +67,9 @@ http://cloud.spring.io/spring-cloud-netflix/
 
 我目前了解一下两种方式:
 1. 为所有生产者提供一个网关, 对外只暴露为一个实例, 在网关这里做负载均衡, 这样对于消费者来说, 生产者似乎只有一个.
-但是这时候网关就成为瓶颈了, 而且网关的网络利用率要除以2, 因为它需要做转发.
-这时候不得不起多个网关服务器, 然后在消费者(调用者)这边也要有简单的负载均衡策略将请求发给不同的网关, DNS解析或其他方法.
-但这样做的话似乎情况又回到之前了... 而且似乎更麻烦
+   但是这时候网关就成为瓶颈了, 而且网关的网络利用率要除以2, 因为它需要做转发.
+   这时候不得不起多个网关服务器, 然后在消费者(调用者)这边也要有简单的负载均衡策略将请求发给不同的网关, DNS解析或其他方法.
+   但这样做的话似乎情况又回到之前了... 而且似乎更麻烦
 2. 在消费者这边保存所有生产者的信息, 比如IP和端口之类. 在客户端这边做负载均衡. 这样比起网关, 少了一次请求转发, 速度通常更快(两边之和大于第三边不一定成立).
 
 但是生产者可能会添加或减少, 需要动态维护可用的生产者的列表, 而不能写死.
@@ -92,3 +92,142 @@ http://cloud.spring.io/spring-cloud-netflix/
 # 其他的服务发现策略 #
 其他的服务发现方法还是有的, 比如基于Zookeeper 的服务发现, 但上次发现这篇文章 [为什么不要把ZooKeeper用于服务发现](http://www.infoq.com/cn/news/2014/12/zookeeper-service-finding)
 这篇文章还没看, 等我对服务发现更了解一些时候, 再去看看它的理由吧
+
+
+
+# 服务端
+
+## 单机配置
+
+eureka.numberRegistrySyncRetries=0
+
+*eureka.environment* 指定环境
+
+### spring
+
+```java
+@EnableEurekaServer 引入了 EurekaServerConfiguration 配置
+```
+
+引入了 classpath:/eureka/server.properties 属性文件
+
+```java
+EurekaDashboardProperties eureka.dashboard.* 用于配置eureka主页信息
+```
+
+```
+InstanceRegistryProperties
+```
+
+
+
+eureka.waitTimeInMsWhenSyncEmpty=0
+
+# 服务端配置 #
+eureka.name
+eureka.vipAddress
+eureka.sort
+eureka.shouldUseDns=false
+eureka.serviceUrl.default=http://localhost:8080/eureka/v2/
+eureka.decoderName=JacksonJson
+
+eureka.environment 指定环境
+eureka.datacenter 指定数据中心
+
+eureka.server.enable-self-preservation 是否允许自我保护模式
+
+
+# 客户端配置 #
+eureka.registration.enabled=true/false 该客户端是否将自己注册到eureka
+
+eureka.preferSameZone=true
+eureka.shouldUseDns=false
+eureka.serviceUrl.default=http://localhost:8080/eureka/v2/
+eureka.decoderName=JacksonJson
+
+# 常用的类 #
+ApplicationInfoManager 管理app状态
+EurekaClient接口 调用eureka服务
+DiscoveryClient EC的实现类
+EurekaConfigBasedInstanceInfoProvider 用于创建InstanceInfo
+EurekaInstanceConfig 
+
+# spring-cloud下的配置 #
+## eureka客户端 ##
+@EnableEurekaClient
+默认
+1. 以 spring.application.name 作为名字
+2. server.port 作为 nonSecurePort
+3. 会注册自己到eureka
+
+
+
+eureka:
+  instance:
+    statusPageUrlPath: ${management.context-path}/info
+    healthCheckUrlPath: ${management.context-path}/health
+
+eureka:
+  client:
+    healthcheck:
+      enabled: true
+HealthCheckHandler
+
+${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}. 
+
+
+## zone ##
+在实例的 metadataMap.zone 设置所属的zone (一个字符串而已)
+然后 eureka.client.preferSameZoneEureka = true
+
+## 单机服务端配置 ##
+```
+server:
+  port: 8761
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+```
+
+## 多机服务端配置 ##
+```
+---
+spring:
+  profiles: peer1
+eureka:
+  instance:
+    hostname: peer1
+  client:
+    serviceUrl:
+      defaultZone: http://peer2/eureka/
+  server:
+    number-of-replication-retries: 0
+    enable-self-preservation: false
+
+
+---
+spring:
+  profiles: peer2
+eureka:
+  instance:
+    hostname: peer2
+  client:
+    serviceUrl:
+      defaultZone: http://peer1/eureka/
+```
+
+
+# 认证 #
+http://cloud.spring.io/spring-cloud-static/spring-cloud-netflix/1.3.0.M1/#Authenticating with the Eureka Server
+
+
+feign 只会解析 2xx 和 404
+其他的全部作为异常扔出去, 有点过分了会导致熔断器的执行
+
+HystrixBadRequestException 这个异常不会触发熔断器的执行
