--- a/Java/h2/笔记.md
+++ b/Java/h2/笔记.md
@@ -5,6 +5,13 @@ http://www.h2database.com/html/main.html
 
 http://www.h2database.com/html/features.html
 
+# 服务器模式 #
+可以放开tcp接口
+
+
+# 内嵌 #
+1. 持久化
+2. 内存
 
 # URl格式 #
 ```
@@ -21,6 +28,29 @@ jdbc:h2:mem:databaseName
 "jdbc:...;INIT=runscript from '~/1.sql'\\;runscript from '~/2.sql'";
 
 # 辅助类 #
+org.h2.tools.*
+
 RunScript
 Script
 DeleteDbFiles
+
+SimpleResultSet
+
+# 连接参数 #
+IFEXISTS=TRUE 为true的话只有数据库已经存在才打开, 如果不存在就异常, 默认是false, 即会自动创建数据库文件
+INIT=初始化指令
+
+1. 多连接
+2. 多线程
+3. 锁
+	1. select 读锁
+	2. select for update 写锁
+	3. 其他的写操作 写锁
+	4.
+
+# 数据库文件布局 #
+test.h2.db 数据库文件
+test.lock.db
+test.trace.db
+test.lobs.db
+ 
