--- a/Java/eureka/笔记.md
+++ b/Java/eureka/笔记.md
@@ -31,9 +31,9 @@ http://cloud.spring.io/spring-cloud-netflix/
 
 0. SpringBoot提供了健康检查器(HealthIndicator, 简称HI), 用于体现当前应用的健康情况
 1. 启动spring对eureka的健康检查支持, 它会添加一个eureka相关的HI (简称EHI), 和一个callback. 
-	1. EHI是定期更新的, 因此跟server上的状态会有很大的差距
+   1. EHI是定期更新的, 因此跟server上的状态会有很大的差距
 2. 这个callback会被定期调用, 目前还不知道如何设定它的频率.
-	1. 它会以除了EHI外的所有的HI的状态来决定该实例的状态.
+   1. 它会以除了EHI外的所有的HI的状态来决定该实例的状态.
 3. 自己随便新增一个HI(简称MHI), 然后暴露一些接口, 用于控制该HI的UP/DOWN. 初始化为DOWN
 4. 由于MHI状态是DOWN, 根据 2.1 此时实例的状态不是UP
 5. 当你认为程序已经准备好接收请求了, 就将MHI的状态设置为UP(通过你暴露的接口)
@@ -48,17 +48,17 @@ http://cloud.spring.io/spring-cloud-netflix/
 5. DOWN -> UP 也是同理
 6. 得找找办法降低反应所需要的时间
 7. 将服务的状态设置为 out_of_service 之后, 它就一直为 out_of_service 了, 无论我怎么up它都还是out_of_service. 但是down状态的话就不会出现这种情况
-	1. 找到解决方法了, out_of_service 必须先变成 down, 然后再变成up才行.
-	2. 竟然还有这种规定!!!
+   1. 找到解决方法了, out_of_service 必须先变成 down, 然后再变成up才行.
+   2. 竟然还有这种规定!!!
 
 # 未解的问题 #
 1. eureka-server 有一个 Renews threshold	和 Renews (last min)的概念, 现在对它还不是太懂, 导致当右服务生产者挂掉的时候, eureka-server 进入自我保护模式, 此时它不会移除实际上已经挂掉的服务器, 在非自我保护模式的时候, 一旦90秒没有心跳就自动移除, 不过现在就是一直僵死在那了.
-	1. 这样会导致客户端拿到实际上已经挂掉的服务的url, 调用的时候就会出现超时的情况, 客户端只能fallback或重试.
-	2. 似乎可以通过禁用 自我保护模式来解决这个问题  enableSelfPreservation: false
-	3. 测试中发现 Renews threshold = 曾经拥有过的服务数量 *2, 即使一个服务起来之后, 又挂了, 但它贡献的2依旧存在, 如果本来有5个服务, 那么他是10, 然后5个服务全挂了, 它还是10, 又有5个新的服务起来了, 它变成20
-	4. Renews (last min) 总是等于当前存活的服务数量 * 2
-	5. 后来测试过程中又发现 Renews threshold	= 0 坑了 ... 不知道为什么 
-	6. **目前的解决方法**, eureka.server.enableSelfPreservation=false, 
+   1. 这样会导致客户端拿到实际上已经挂掉的服务的url, 调用的时候就会出现超时的情况, 客户端只能fallback或重试.
+   2. 似乎可以通过禁用 自我保护模式来解决这个问题  enableSelfPreservation: false
+   3. 测试中发现 Renews threshold = 曾经拥有过的服务数量 *2, 即使一个服务起来之后, 又挂了, 但它贡献的2依旧存在, 如果本来有5个服务, 那么他是10, 然后5个服务全挂了, 它还是10, 又有5个新的服务起来了, 它变成20
+   4. Renews (last min) 总是等于当前存活的服务数量 * 2
+      5. 后来测试过程中又发现 Renews threshold= 0 坑了 ... 不知道为什么 
+   5. **目前的解决方法**, eureka.server.enableSelfPreservation=false, 
 2. 另外server高可用的问题似乎还没有解决, 建议在这个问题解决之前, 不要大规模使用. 坑太深.
 3. 另外有些值"可以改, 但又不能改", 比如客户端发心跳的频率, 因为目前服务端似乎认为客户端一定是每30秒发心跳的, 一旦客户端的频率变了, 服务端也要跟着变化, 而且所有的客户端的频率都要一致...
 
@@ -67,9 +67,9 @@ http://cloud.spring.io/spring-cloud-netflix/
 
 我目前了解一下两种方式:
 1. 为所有生产者提供一个网关, 对外只暴露为一个实例, 在网关这里做负载均衡, 这样对于消费者来说, 生产者似乎只有一个.
-但是这时候网关就成为瓶颈了, 而且网关的网络利用率要除以2, 因为它需要做转发.
-这时候不得不起多个网关服务器, 然后在消费者(调用者)这边也要有简单的负载均衡策略将请求发给不同的网关, DNS解析或其他方法.
-但这样做的话似乎情况又回到之前了... 而且似乎更麻烦
+   但是这时候网关就成为瓶颈了, 而且网关的网络利用率要除以2, 因为它需要做转发.
+   这时候不得不起多个网关服务器, 然后在消费者(调用者)这边也要有简单的负载均衡策略将请求发给不同的网关, DNS解析或其他方法.
+   但这样做的话似乎情况又回到之前了... 而且似乎更麻烦
 2. 在消费者这边保存所有生产者的信息, 比如IP和端口之类. 在客户端这边做负载均衡. 这样比起网关, 少了一次请求转发, 速度通常更快(两边之和大于第三边不一定成立).
 
 但是生产者可能会添加或减少, 需要动态维护可用的生产者的列表, 而不能写死.
@@ -92,3 +92,92 @@ http://cloud.spring.io/spring-cloud-netflix/
 # 其他的服务发现策略 #
 其他的服务发现方法还是有的, 比如基于Zookeeper 的服务发现, 但上次发现这篇文章 [为什么不要把ZooKeeper用于服务发现](http://www.infoq.com/cn/news/2014/12/zookeeper-service-finding)
 这篇文章还没看, 等我对服务发现更了解一些时候, 再去看看它的理由吧
+
+
+
+# Eureka服务端
+
+搭建好之后比较少变化, 所有数据都放在内存里, 不需要外部存储.
+
+本身也是一个客户端, 用于发现其他的服务端
+
+k
+
+# Eureka客户端
+
+
+
+# 服务端和客户端的通用配置
+
+以下只会提到一些常用的关键的配置, 大部分配置官方不建议修改
+
+eureka.name 实例的名字
+
+eureka.port 端口
+
+eureka.vipAddress TODO
+
+eureka.serviceUrls eureka服务器的地址 可以配置多个
+
+
+
+# 服务端的配置
+
+enableSelfPreservation 是否启动自我保护, 一旦进入自我保护状态, 就会冻结当前的配置信息
+
+ getRenewalPercentThreshold 返回一个百分比 一旦所有客户端的心跳成功率低于这个阈值 就会尝试进入自我保护状态
+
+```
+getRenewalThresholdUpdateIntervalMs 定时更新 "所有客户端心跳成功率百分比"
+```
+
+```
+getPeerEurekaNodesUpdateIntervalMs 定时获取peer服务器的配置改变情况
+ getNumberOfReplicationRetries 对replication的重试次数
+ getPeerEurekaStatusRefreshTimeIntervalMs
+ getWaitTimeInMsWhenSyncEmpty
+```
+
+# 客户端的配置
+
+serviceUrl.defaultZone=服务地址1,服务地址2...
+
+```
+shouldRegisterWithEureka 是否要将自己注册到eureka上, 纯粹的消费客户端就不用了!
+```
+
+
+
+instanceConfig
+
+instanceId
+
+appname
+
+appGroupName
+
+instanceEnabledOnit
+
+virtualHostName
+
+secureVirtualHostName
+
+ipAddress hostName
+
+statusPageUrlPath statusPageUrl homePageUrl homePageUrlPath healthCheckUrlPath healthCheckUrl
+
+metadataMap
+
+dataCenterInfo
+
+securePort nonSecurePort securePortEnabled nonSecurePortEnabled
+
+
+
+```
+leaseRenewalIntervalInSeconds 心跳间隔时间 默认是30
+```
+
+```
+getLeaseExpirationDurationInSeconds 超过这个时间没有心跳就会被服务端移除 默认是90
+```
