--- a/Database/MySQL/数据类型.md
+++ b/Database/MySQL/数据类型.md
@@ -9,3 +9,27 @@ integer
 int
 double
 date
+
+float
+double
+decimal
+
+tinyint -128~127
+int int
+bigint long
+
+char 长度固定
+varchar 长度可变
+这两个都是基于 char 的 对于utf8的话一个char可能对应了多个byte
+
+binary
+varbinary
+长度是二进制级别的
+
+enum
+set
+
+date
+
+datetime
+timestamp
