--- a/Java/Lib/logback/笔记.md
+++ b/Java/Lib/logback/笔记.md
@@ -1,3 +1,8 @@
+可以通过系统属性指定位置
+java -Dlogback.configurationFile=/path/to/config.xml chapters.configuration.MyApp1
+
+
+
 使用的是slf的
 Logger
 LoggerFactory
