--- a/Web/webpack/笔记.md
+++ b/Web/webpack/笔记.md
@@ -16,16 +16,18 @@ https://webpack.js.org/concepts/output/
 
 最后打包后的输出
 
-一些占位符
+可以调整hash算法相关参数
 
-[id]
-
-[name]
-
+filename 可以包含的占位符 id name hash chunkhash
+[id] chunk的id???
+[name] 该entry的名字, 就是你在 entry 里指定的名字
 [hash] 对整个编译的一个hash
+[chunkhash] 针对每个文件的内容的一个hash
+[hash:16] 可以控制hash长度
 
-[chunkhash] 对每个文件的一个hash
+用于决定最终的输出文件名 会产生在 output.path 目录下
 
+filename对于按需加载的模块无效, 需要使用 chunkFilename
 
 
 ## Loaders
@@ -125,19 +127,17 @@ https://webpack.js.org/configuration/dev-server/
 
    2. 常见配置:
 
-      1. port 端口
       2. compress 是否gzip压缩
       3. contentBase 根目录
       4. filename lazy模式相关
       5. headers 设置额外的头
       6. historyApiFallback 用于重写url
-      7. hot 是否支持热模块替换 需要加载插件
 
-   3. 仅支持命令行的配置
+   3. 仅支持命令行的配置[千万注意有些参数只能在命令行指定]
 
-      1. host
+      1. host port
       2. inline 进入inline模式
-      3. ​
+      3. hot hotonly 是否支持热模块替换 需要加载插件
 
 ## 其他
 
@@ -268,3 +268,128 @@ HashedModuleIdsPlugin
 
 # 开发 #
 https://webpack.js.org/guides/development/
+
+
+# 代码拆分 #
+## vendor拆分 ##
+https://webpack.js.org/guides/code-splitting-libraries/
+步骤:
+1. 在entry(是个obj)里指定 vendor:['jquery','angular','等等...']
+2. 将output的filename修改成 '[name].[chunkhash].js'
+3. 添加插件 new webpack.optimize.CommonsChunkPlugin({name: 'vendor'})
+
+### chunkhash与hash的区别 ###
+TODO
+
+## css拆分 ##
+按照教程做 比较简单 https://webpack.js.org/guides/code-splitting-css/
+
+
+## 按需加载 ##
+
+# 生产构建 #
+webpack- p
+相当于
+webpack --optimize-minimize --define process.env.NODE_ENV="'production'"
+
+## Source Map ##
+推荐生成 source map 方便调试
+
+## 如何使用环境变量 ##
+使用 cross-env 依赖可以跨平台设置环境变量
+```
+{
+  "scripts": {
+    "build": "cross-env NODE_ENV=production PLATFORM=web webpack"
+  }
+}
+```
+在js内就可以使用 process.env.NODE_ENV 获得环境变量了
+
+
+
+
+# 热替换 #
+devServer.hot=true
+inline: false
+devServer.hotOnly=false 用于表示如果热替换失败 是否要使用刷新页面来作为fallback
+new webpack.HotModuleReplacementPlugin()
+
+# Rule #
+每个Rule可以分成3个部分: 条件, 结果, 内嵌Rules
+## 条件 ##
+"在a模块里加载了b模块", 那么b是 resource, a是issuer
+test include exclude resource 用于匹配 resource
+issuer 用于匹配 issuer
+
+## 结果 ##
+结果可以是:
+1. 使用一些loader: loader options use
+	1. Rule.loader是Rule.use:[{loader}]的简写
+2. 解析一些选项: query, loaders
+
+use:['style-loader'] 是 use:[{loader:'style-loader'}]的简写
+```
+use: [
+  {
+    loader: 'style-loader'
+  },
+  {
+    loader: 'css-loader',
+    options: {
+      importLoaders: 1
+    }
+  },
+  {
+    loader: 'less-loader',
+    options: {
+      noIeCompat: true
+    }
+  }
+]
+```
+
+
+## 内嵌结果 ##
+rules oneOf 子属性
+
+# resolve #
+用于配置当 "import 'lodash';" 的时候具体做些什么来加载lodash
+
+# 常用插件 #
+## html-webpack-plugin ##
+npm install html-webpack-plugin --save-dev
+用于简化html文件的创建: 比如自动插入生成的js的script标签 和 link标签等
+
+
+
+
+
+
+
+
+
+
+
+
+
+index-00e20056ec07d5e659b1
+vendor-847aae578e106fedf845
+
+如果没做特殊配置
+1. 内容不变 全部不变
+2. 内容改变 全部都变
+
+在
+new webpack.optimize.CommonsChunkPlugin({
+	name: ['vendor', 'manifest'],
+}),
+中的name添加了manifest之后执行webpack命令
+会产生3个文件
+index-7ff188cae469ff6ae227
+manifest-32ec628847045ac42c893
+vendor-81bc5e4f94b64764c048
+变化的只有index和manifest
+
+加载顺序变成 manifest vendor index
+
