--- a/Java/J2EE/Jersey/开始.md
+++ b/Java/J2EE/Jersey/开始.md
@@ -199,9 +199,9 @@ public class MyApplication extends ResourceConfig {
 2.0后才引入
 
 jersey的客户端支持更换底层的http组件(称为 Connector )
-比如 HttpURLConnection, apache http client
-UriBuilder
-UriTemplate
+比如 HttpURLConnection, apache http client, netty
+帮助构建uri的辅助类 UriBuilder UriTemplate
+
 
 	Client client = ClientBuilder.newClient();
 	WebTarget target = client.target("http://localhost:9998").path("resource");
