--- a/Database/Redis/笔记.md
+++ b/Database/Redis/笔记.md
@@ -1,15 +1,10 @@
 # 通用的key操作 #
-1. del key
-删除这个key
-
+1. del key 删除这个key
 2. dump key
-3. exists key
-判断key是否存在, 存在则返回1
-
-4. expire key time
-设置key在time秒后过期
+3. exists key 判断key是否存在, 存在则返回1
+4. expire key time 设置key在time秒后过期
 5. expireAt key timestap
-6. keys auth*
+6. keys auth* [性能差 不建议使用]
 查找有哪些key
 	1. 找出所有满足auth*的key们
 	2. 用keys *就可以找出当前都有哪些key
@@ -64,39 +59,33 @@ redis默认有多个数据库, 使用select来切换
 	
 	
 # Strings #
-1. append key value
+get
+set set有很多变种:setnx setex
+mset 一次设置多个值
+msetnx
+getset
+
+incr 加1
+incrBy 加任何值
+decr decrBy
+increbyfloat
+
+## 不常用 ##
+append key value
 追加字符串
 返回新的字符串的长度
-2. bitcount key [start end]
-3. bitop and/or/xor dest src1 src2 ...
+
+## 字节操作 ##
+bitcount key [start end]
+bitop and/or/xor dest src1 src2 ...
 将src1, src2的位运算结果保存到dest
-4. bitops
-5. decr key
-	1. 让key值减1, 必须是个int
-6. decrby key amount
-	1. 让key值减amount, 必须是个int
-7. get key
-8. getbit key offset
-9. getrange key beg end
+bitops
+getbit key offset
+getrange key beg end
 获取一个字符串的子串,从beg开始, 到end(不包含)结束
 如果end太大, 那么也不会超过整个字符串的长度
 如果end=-1那么表示到完
 如果beg是负数那么表示倒数
-10. getset key value
-get之后马上set
-也就是返回它的旧值
-原子性
-11. incr key
-	1. 加1,必须是int
-12. incrby key amount
-	1. 加amount, 必须是int
-13. incrbyfloat key amount
-	1. 加amount, 必须是浮点数
-14. mget key1 key2 ...
-一次性获取多个
-15. mset key1 value1 key2 value2 .. keyN valueN
-一次性设置多个key
-具有原子性
 16. msetnx
 用于设置多个键以及多个值，仅当没有一个已存在。如果从当前操作的任何一个存在，那么MSETNX不执行任何操作。
 17. psetex
@@ -121,6 +110,7 @@ setrange name 1 hhh -> xhhh
 23. strlen key
 获取字符串的长度
 
+
 ## 位操作 ##
 假设key对应的数据是一个string, 要求其是ascii字符组成
 这样每个字符大小是8位
@@ -137,7 +127,10 @@ getbit a 6=0
 getbit a 7=1
 setbit key offset value
 
-# 列表 20160225 #
+# 列表 #
+如果将list用于阻塞队列, 那么是挺好的
+但是如果用做分布式list, 也只能从头尾进行操作, 因为底层是基于链表的, 所以随机访问很弱
+
 1. blpop key1 key2, ... timeout
 	只要这n个列表中的任意一个有数据就会返回
 	1. lpop的阻塞版本, 当列表为空的时候就会阻塞
@@ -148,7 +141,7 @@ setbit key offset value
 	1. 同blpop
 3. brpoplpush
 	1. 阻塞版本
-4. lindex key index
+4. lindex key index [本质是基于链表实现, 因此效率很低]
 	1. 通过索引访问元素, 从0开始
 5. linsert key before|after pivot value
 	1. 在pivot(一个数组的元素的值)的前面或后面插入一个元素value
@@ -218,8 +211,24 @@ setbit key offset value
 15. sscan
 	1. 见scan
 
-# Sorted Set #
-按照score从小到大排序, score相同的按照member来排序
+# 有序set#
+按照score(数值)从小到大排序, score相同的按照member(字符串)来排序
+member必须唯一
+
+支持:
+1. 按照score范围 找出/删除 数据
+2. 按照member范围 找出/删除 数据
+3. 按照score排名(升序或降序) 找出/删除 数据
+4. 根据member获得 排名(升序或降序)/分数
+5. 添加/更新(覆盖或增量) 一个member对应的分数 
+
+利用上面的特性, 可以做到一些有用的实现:
+1. 优先级队列, score作为优先级, member作为值或者id(通过这个id可以找到具体的值)
+	1. 假设所有机器必须定时发送心跳给服务端, 如果超过1分钟没有发心跳就认为这台机器崩溃
+	2. 那么 member保存机器的id score保存最近的心跳时间
+	3. 用一个定时任务 查询 score < 当前时间 - 1分钟 的数据, 这样就可以获得过期的机器了
+		1. 当然 这个动作本身需要一些锁来防止同时执行
+
 
 特殊的score值:
 	1. -inf 负无穷大
@@ -231,8 +240,8 @@ setbit key offset value
 		1. 全部的数量
 		2. 某分数段的数量
 		3. member位于某区间的数量
-	3. 加分
-	4. 集合操作
+	3. 加分 对某个成员进行加分
+	4. 集合操作 将多个有序集的members做交集, member相同的, 可以对score进行聚合
 	5. 列出
 		1. 按照名次
 		2. 按照分数
@@ -318,8 +327,9 @@ setbit key offset value
 8. hlen key
 	1. 获得大小
 9. hmget key name1, ...
-	1. 获取多个name
-10. hmset key name1 value1 key2 value ...
+	1. 获取多个value
+10. hmset key name1 value1 name2 value2 ...
+	1. 批量设置
 11. hset key name value
 	1. 设置value
 12. hsetnx key name value
@@ -329,27 +339,25 @@ setbit key offset value
 14. hvals key
 	1. 获得values的集合
 15. hscan
+16. hvals 获得哈希表中的所有值
 
 
 
 # HyperLogLog #
 
-# Transactions #
-1. discard
-	1. 将前面已经执行的命令flush, 然后将当前的状态恢复为普通
-	2. 无法回滚
-2. exec
-	1. 标记成功, 然后将当前状态恢复为普通
-3. multi
-	1. 开始一个事务, 进入事务状态
+# 事务 #
+1. discard 放弃所有执行的命令
+2. exec 执行事务
+3. multi 开始一个事务, 进入事务状态
 4. unwatch
 	1. 一旦事务结束的时候会自动unwatch, 不需要手动执行
 5. watch key
-	1. 在multi之前执行, 监控一些值的变化
+	1. 在multi之前执行, 执行该语句, 表示要监控这些值的裱花
 	2. 一旦multi执行, 这些key的当前的值会被记录下来
 	3. 一旦exec的时候,会检查这些值是否变过
 	4. 如果变过那么执行失败
 	5. 否则执行成功
+	6. 通常要配合 while 循环
 multi之后, 你输入的命令会被加入队列, 没有被执行
 假设你输入了10条语句, 然后你输入exec
 结果执行到第5条的时候发生了错误, 那么前4条的结果无法回滚
@@ -514,9 +522,13 @@ http://blog.csdn.net/heiyeshuwu/article/details/41248379
 31. time
 	1. 返回服务器时间
 
-# Pub/Sub #
+
+# 发布/订阅 #
+可以实现传统消息队列中的topic
+
 1. psubscribe pattern [pattern ...]
-	1. pattern支持 * ? []等
+	1. pattern支持 * ? []等来达到通配符的作用
+	2. 一旦执行, 当前连接就会被阻塞
 2. pubsub subcommand [argument [argument ...]]
 	1. pubsub channels [patterns]
 		1. 列出所有 活动的(active) 的频道
@@ -583,3 +595,11 @@ b都应该使用RDB, 而没有AOF
 2. 关闭b
 3. 将a的RDB文件复制到b出, 替换b的rdb文件
 4. 启动b, ...
+
+# 脚本 #
+eval 执行脚本
+EVAL script numkeys key [key ...] arg [arg ...]
+上述语法的缺点是每次都要传递 script, 也就是完整的脚本的内容
+可以先用 script load 将一个脚本加载进redis, 这可以得到一个sha1
+然后就可以使用 Evalsha 来达到和eval一样的效果
+  
