--- a/Java/Lib/logback/笔记.md
+++ b/Java/Lib/logback/笔记.md
@@ -1,5 +1,12 @@
 可以通过系统属性指定位置
 java -Dlogback.configurationFile=/path/to/config.xml chapters.configuration.MyApp1
+这种方式适合多环境发布的时候
+
+假设在开发环境我们有一套logback.xml的配置, 但是在生产环境需要使用另外一套logback.xml
+但是日志的初始化在比较早的阶段, 因此无法使用程序的配置, 只能使用上面的方式了
+
+logback-test.xml 的优先级比 logback.xml 高, 可以用来在测试环境的时候只输出到控制台!
+
 
 
 
