--- a/Java/zookeeper/笔记.md
+++ b/Java/zookeeper/笔记.md
@@ -1,3 +1,8 @@
+# 数据模型 #
+总体呈现一个树结构
+每个树的节点有一个名字, 名字不能包含奇怪的字符, 但一些常见的符号可能是可以的, 可以试试
+每个节点可以存储一个数据, byte[], 建议不超过1kb
+
 # 节点操作 #
 
 ## 创建 ##
@@ -26,8 +31,22 @@ dataLength 该节点的数据长度
 numChildren 该节点的儿子节点数
 
 
+### 普通节点 ###
+普通节点从创建之后就会一致存在, 直到别人删除它
+
+### 临时节点 ###
+每个连接的回话可以创建属于自己的临时节点, 节点会在回话结束的时候自动删除, 当然也可以自己手动删除
+临时节点也是有name的, 当然这个名字不能和别人的冲突
+
+### 序列节点 ###
+当你创建一个节点的时候, 可以请求zk帮你加上一个后缀的sequence, 其实是起到一个序列的作用
+
+
 ## 监听 ##
-zk不用于大量的存储, 要尽量保证小
+1. 监听一次性的, 如果要持续监听, 那么就需要再watch一下, 这段间隔时间内如果发生多次改变, 则再次watch之后只能看到最后一个改变
+2. 对客户端来说change是有序的, 一个节点短时间内先后发生2次data change, 客户端肯定不会先看到第二次change, 再看到第一次change, 但是客户端可能看不到第一次change?
+
+监听节点创建/删除/data改变/子节点改变
 
 # ZK连接串 #
 chroot=基础路径, 默认是/
@@ -39,8 +58,21 @@ CONNECTING -> CONNECTED
 
 
 # zk中的时间 #
+zkid
 每个操作够会产生一个zxid, zxid小的操作一定比zxid大的操作早结束
 
+版本号, 对同一个节点的写操作会导致版本++, zk有如下的3种版本
+version 对data的修改会导致这个值++
+cversion 对子节点的修改会导致这个值++
+aversion 对ACL的修改会导致这个值++
+
+ticks是zk中的时间单位
+比如zk说每个回话必须在2ticks内有心跳, 否则认为死亡
+如果定义 1tick=2000毫秒 那么就是4000毫秒内必须有心跳
+
+# 会话 #
+zk的连接串上可以带一个chroot=/a/b/c, 表示将这个回话的所有操作挂到/a/b/c名下
+如果我要读取 /d 就会变成读取 /a/b/c/d
 
 
 # 一些例子 #
@@ -61,6 +93,15 @@ CONNECTING -> CONNECTED
 
 # 安全 #
 
+
+# 基础配置 #
+conf/zoo.cfg
+clientPort=2181
+dataDir=/var/lib/zookeeper
+
+bin/zkServer.sh start
+
+clientPortAddress=127.0.0.1 绑定的地址
 
 # 集群配置 #
 
