--- a/Java/Lib/Log4j2/笔记.md
+++ b/Java/Lib/Log4j2/笔记.md
@@ -1,14 +1,46 @@
 # 优势 #
 1. 比 log4j 性能更好
 2. 提供更多功能
-3. 支持接口和实现分离
+3. 支持接口和实现分离, 它同时是一个SLF4J的实现
 4. 异步
 5. 原子性重新加载配置
 6. 提供一些过滤功能
 7. 定制日志级别
+8. log4j2 与 slf4j 兼容, 用户可以使用 log4j-to-slf4j 将log4j2的输出导向slf4j
+9. 经过小心的设计来避免对垃圾回收带来影响
+10. 拥有一个插件系统, 容易扩展
+11. 自定义log级别
+12. 支持lambda表达式, 可以lazy构造消息
+13. 支持消息对象, 页就是这个消息可以携带一些复杂的数据结构, 当然这还需要一些特殊的Layout filter的配合
+14. log4j2的layout返回byte[] 而logback返回String, 前者不需要考虑编码问题, 因此么有Logback Encoder的类似概念
+15. 官方宣称并发性更好
+
+# 一些模块解释 #
+log4j-api 接口
+log4j-core 核心实现
+log4j-jcl commons-logging的桥, 用户直接对 commons-logging 编程
+log4j-1.2-api 1.2版本的桥, 用户直接对旧版log4j编程
+log4j-slf4j-impl 作为slf4j的一个实现, 用户直接对slf4j接口编程
+log4j-jul Java Util Logging的适配器, 用户直接对jul接口编程
+log4j-to-slf4j, 是一个slf4j的适配器, 依赖于slf4j和另外一个slf4j的实现(比如logback), 用户直接对slf4j接口编程
+
+log4j-slf4j-impl 不能和 log4j-to-slf4j 一起用, 这会产生一个循环
+
+# 建议 #
+根据现在市面上的趋势, SLF4J 接口是王道, 新的Log4j2接口也还行
+编程的时候一定要对着接口编程, 比如SLF4J接口或 Log4j2接口
+然后具体的实现由用户指定
 
 # 一些概念 #
 ![结构图](http://logging.apache.org/log4j/2.x/images/Log4jClasses.jpg)
+
+
+获取root logger
+```
+Logger logger = LogManager.getLogger(LogManager.ROOT_LOGGER_NAME);
+Logger logger = LogManager.getRootLogger();
+```
+
 
 Logger 有一个名字
 LoggerConfig 有一个名字
@@ -25,6 +57,11 @@ Filter
 2. 在传给LC之后, 在Appender之前进行过滤
 3. 在每个Appender处也可以进行过滤
 
+logger有一个日志级别, 只有满足日志级别的事件才会被记录
+每个Appender, 有一个filter, 只有通过filter的才会被该appender处理
+ 
+
+
 Although an event may be accepted by a Filter the event still might not be logged. This can happen when the event is accepted by the pre-LoggerConfig Filter but is then denied by a LoggerConfig filter or is denied by all Appenders.
 
 可以有多个 Filter 对同一个消息进行过滤
@@ -34,12 +71,16 @@ Deny 一旦有filter返回它, 就不会调用其他filter了, 马上拒绝
 Neutral 中立, 看其他的filter的结果
 
 Layout
+用于定制日志的格式
 
 一般情况下 Logger 跟一个 LoggerConfig 相关, 并且他们名字相同
 但是可能某个Logger并没有提供配置, 因此他会使用它的父亲的 LoggerConfig, 直到根 LoggerConfig
 
 Logger 的继承是通过 LoggerConfig 来实现的
 名字为 com.foo 的LC 是 名字为 com.foo.bar 的父亲
+
+appender是一个抽象, 用于表示"添加一条日志"
+
 
 # 杂 #
 additivity="false" 的作用是 阻断当前分支点不会再使用与父节点的 appender
@@ -186,3 +227,46 @@ p 或 level 日志级别 %-5level 左对齐, 长度5
 X{key}
 
 [※]表示会有性能损失
+
+# 从log4j 1.x 迁移到2.x #
+将旧版 log4j 的jar包换成 log4j-1-2-api.jar
+前者包含接口和实现, 后者只包含接口, 后者会将日志导向log4j2
+比较麻烦的是有一些外部依赖已经手动导入了log4j.jar了, 你需要一个一个排除它们
+> 如果我没记错的话, Spring还提供了一些解决方案, 那就是
+```
+<dependency>
+	<g>log4j</g>
+	<a>log4j</a>
+	<v>fake</v>
+</dependency>
+```
+
+# 配置log4j #
+通常使用xml配置, 也支持其他格式
+可以使用 ${foo} 来读取变量
+
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<Configuration>
+	<Appenders>
+		<Console name="STDOUT" target="SYSTEM_OUT">
+			<PatternLayout pattern="%d %-5p [%t] %C{2} (%F:%L) - %m%n"/>
+		</Console>
+		<File name="A1" fileName="A1.log" append="false">
+			<Log4j1XmlLayout />
+		</File>
+		<!--对其他的appender进行包装, 使其异步-->
+		<Async name="ASYNC">
+			<AppenderRef ref="TEMP"/>
+		</Async>
+	</Appenders>
+	<Loggers>
+		<Logger name="org.apache.log4j.xml" level="debug">
+		<AppenderRef ref="A1"/>
+		</Logger>
+		<Root level="debug">
+			<AppenderRef ref="STDOUT"/>
+		</Root>
+	</Loggers>
+</Configuration>
+```
