--- a/Other/Ansible/笔记.md
+++ b/Other/Ansible/笔记.md
@@ -1,5 +1,10 @@
  # 介绍 #
 https://www.ansible.com
+http://www.ansible.com.cn/docs/intro.html
+
+# Ansible原理 #
+ansible通过ssh协议连接到各个机器, 然后在机器上执行命令
+ansible可能会上传一些脚本到服务器上, 并且缓存住, 避免每次都上传
 
 # Host Key Checking #
 当第一次ssh到某台主机的时候, 如果该主机不在 known_hosts 里, ssh就会发出一个询问
@@ -103,21 +108,6 @@ local 当前机器
 docker
 此时 ansible_host 指的是docker容器的名字
 ansible_user 指定的用户必须在容器里存在
-
-# 配置文件 #
-
-按照如下的优先级
-- ANSIBLE_CONFIG (an environment variable)
-- ansible.cfg (in the current directory)
-- .ansible.cfg (in the home directory)
-- /etc/ansible/ansible.cfg
-- 
-配置都是INI格式, #或;开头的行是注释
-
-ask_pass 默认 False, 表示是否应该询问密码, 如果你使用的是非ssh key模式
-ask_sudo_pass 默认 False 当你sudo需要密码的时候 是否询问
-forks 并发数
-host_key_checking 默认是 True 当第一次ssh到某台主机的时候, 如果该主机不在 known_hosts 里, ssh就会发出一个询问
 
 # module #
 每个模块的功能可以用 ansible-doc 模块名 查询
