--- a/Java/RxJava/源码学习/笔记.md
+++ b/Java/RxJava/源码学习/笔记.md
@@ -17,3 +17,17 @@
 Completable的观察者
 方法比较简单
 
+# Single #
+
+## Defer ##
+用于延迟一个Single的构建直到subscribe时刻
+
+## Timer ##
+在指定的时刻之后发射出元素 0L
+本来感觉是挺简单的, 看了一下源代码之后发现全是原子操作, 很不好理解! 没想到这么一个简单的命令竟然要考虑这么多的原子操作
+
+# Disposable #
+这是返回给调用者的一个holder, 用于cancel对应的Flowable
+
+SequentialDisposable
+
