--- a/Java/Lib/Ehcache/配置.md
+++ b/Java/Lib/Ehcache/配置.md
@@ -1,12 +1,7 @@
 1. 加jar包
 2. ehcache.xml
 
-# hibernate整合 #
-# servlet整合 #
-# JCache整合 #
-# Spring整合 #
-
-之类有一个例子
+这个有一个例子
 http://www.ehcache.org/ehcache.xml
 
 ```
