--- a/Java/Lib/Log4j2/笔记.md
+++ b/Java/Lib/Log4j2/笔记.md
@@ -85,6 +85,7 @@ appender是一个抽象, 用于表示"添加一条日志"
 # 杂 #
 additivity="false" 的作用是 阻断当前分支点不会再使用与父节点的 appender
 
+通过系统属性 log4j.configurationFile 可以控制log4j2的配置文件
 
 EventLogger
 级别是OFF
