--- a/Java/zookeeper/笔记.md
+++ b/Java/zookeeper/笔记.md
@@ -103,6 +103,51 @@ bin/zkServer.sh start
 
 clientPortAddress=127.0.0.1 绑定的地址
 
+tickTime 描述了时间的单位 2000毫秒 为一个时间单位
+tickTime=2000
+dataDir=/var/lib/zk zk存储数据的地方
+clientPort=2181 暴露的端口
+clientPortAddress=绑定的地址
+
+
 # 集群配置 #
+1. 奇数个节点, 一个leader, 多个follower, leader失败之后, 会发生选举
+
+初始化的时候5个tick之内必须连接上leader, 否则就算超时
+initLimit=5
+同步的时候2个ticket之内必须赶上leader, 否则算超时
+syncLimit=2
+
+下面配置3个节点
+106.14.175.164 ohd2-1
+106.14.13.32 ohd2-2
+106.14.134.234 ohd2-3
+
+initLimit=5
+syncLimit=2
+server.1=ohd2-1:2888:3888
+server.2=ohd2-2:2888:3888
+server.3=ohd2-3:2888:3888
 
 
+在data目录下建立一个文件叫做myid, 里面放一个数字 1 2 3 表示当前server的id
+
+
+2888端口是用于P2P交流
+3888端口用于leader选举
+
+
+
+# zkServer.sh #
+zkServer.sh start
+
+start
+status
+stop
+
+
+# zkClient #
+zkCli.sh -server host:port
+
+连接之后可以用help获得帮助
+zkCli.sh -server zoo1:2181,zoo2:2181,zoo3:2181
