--- a/Other/Kafka/配置解释.md
+++ b/Other/Kafka/配置解释.md
@@ -8,11 +8,28 @@ auto.create.topics.enable 允许自动创建topic
 brokder监听的地址
 listeners=PLAINTEXT://0.0.0.0:9092
 advertised.listeners=PLAINTEXT://我的外网IP:9092 如果要被外网访问的话
+当多网卡的时候有效, 或者只有内网的IP时
 
 delete.topic.enable 是否允许删除topic 通过admin管理工具
 
 log.dirs 优先级比 log.dir 更高, 应该是可以通过逗号指定多个目录吧?
 默认是/tmp/kafka-logs
+
+集群的时候通常需要指定
+broker.id
+
+压缩类型
+compression.type
+
+保留多少数据
+log.retention.bytes
+
+保留多少小时的数据
+log.retention.hours
+log.retention.minutes
+log.retention.ms
+
+	
 
 # topic配置 #
 cleanup.policy 过期数据如何操作 删除or压缩
@@ -29,4 +46,19 @@ acks leader必须收到多少ack才算是成功 0 1 all
 buffer.memory
 max.block.ms
 
+batch.size 默认多少bytes合在一个batch里
+
+一次最大拉多少个消息
+max.poll.records
+
+
 # producer的配置 #
+
+acks
+
+buffer.memory 强制flush之前有一个buffer可以先存放消息
+如果超过这个大小, 那么就会立即触发一个flush
+如果在max.block.ms的时间内无法flush完,就或抛出异常
+
+compression.type 压缩类型
+retries 重试次数
