--- a/Other/Ansible/笔记.md
+++ b/Other/Ansible/笔记.md
@@ -2,6 +2,16 @@
 https://www.ansible.com
 http://www.ansible.com.cn/docs/intro.html
 
+# TODO #
+https://github.com/ansible/ansible-container
+
+
+# 安装 #
+http://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html#latest-releases-via-apt-ubuntu
+还可以参考
+http://wiki.ubuntu.org.cn/%E6%A8%A1%E6%9D%BF:16.04source
+
+
 # Ansible原理 #
 ansible通过ssh协议连接到各个机器, 然后在机器上执行命令
 ansible可能会上传一些脚本到服务器上, 并且缓存住, 避免每次都上传
@@ -114,6 +124,13 @@ ansible_user 指定的用户必须在容器里存在
 比如 ansible-doc yum
 
 # 定义变量 #
+变量优先级 见这里
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html
+
+group_vars/all
+host_vars/all
+roles/x/defaults/main.ym
+
 变量可以在几个地方定义
 在 play 里定义, 通过vars属性
 
@@ -172,5 +189,526 @@ apt apt包管理
 
 get_url 下载文件
 
-group 管理组
-user 管理用户
+# 常用模块 #
+1. user 管理用户和组
+
+## apt系列 ##
+### apt ###
+用apt安装依赖
+
+### apt_repository  ###
+管理apt仓库
+
+### apt_key  ###
+管理apt key
+
+## git系列 ##
+
+- git_config 修改git配置
+- git git操作
+
+## authorized_key ##
+管理ssh认证的keys
+
+## 杂 ##
+
+- at 定时任务
+- cron 定时任务
+- user 管理用户
+- group 管理组
+- iptables
+- hostname 修改hostname
+- ufw 操作ubuntu的ufw防火墙
+- known_hosts 管理 known_hosts 文件
+- make 命令
+- ping
+- systemd 操作systemd
+- service 管理服务
+- letsencrypt
+- deploy_helper
+
+## file ##
+复制文件
+本地->远程
+或
+远程->远程
+
+支持符号链接
+创建目录
+删除文件
+设置目录权限
+
+## jenkins系列 ##
+
+
+
+## lineinfile ##
+
+## npm ##
+做npm操作
+
+
+## uri ##
+发HTTP请求
+
+## get_url ##
+下载文件
+
+url
+dest
+checksum
+
+如果dest是一个目录, 那么文件一定会被下载, 因此需要追忆
+
+如果提供了checksum, 并且dest是一个已存在的文件, 那么会先比对checksum, 如果一致, 那么不会下载文件
+
+
+## unarchive ##
+解压文件
+
+## stat ##
+查看文件状态, 比如判断是否存在
+
+## apt_repository ##
+管理apt仓库
+
+## service ##
+管理服务
+
+## template ##
+利用 jinjia2 的语法对一个模板文件进行渲染, 然后将结果复制到对方服务器上
+
+
+## mysql_db ##
+管理mysql
+
+## git ##
+git支持
+
+## wait_for ##
+等待直到某主机的某端口开放
+
+## script ##
+将本地的一个脚本文件复制到远程, 然后执行
+支持 chdir creates removes 参数
+
+	注意这里的 bootstrap.sh 是本地的一个文件, 运行时候会被复制到远程
+	script: bootstrap.sh -arg 1 -arg 2
+
+## raw ##
+可以在没有python模块的支持下运行命令
+其他的模块大部分都是需要python的支持的
+因为这个raw模块也常用语安装一些初始化模块, 比如先把python装了, 这样你就可以用其他模块了
+需要注意的是, 一些参数在raw模块下是不生效的 具体看文档了
+
+	- name: Bootstrap a host without python2 installed
+	  raw: dnf install -y python2 python2-dnf libselinux-python
+
+## command ##
+不经过shell 执行一个命令, 因此shell下特有的 $HOME, 和shell的语法 > | & 是无效的
+creates: 当文件存在时不执行
+removes: 当文件不存在时不执行
+chdir: 改变执行目录
+
+	
+	下面这个例子有点混淆, 因为不知道 creates=... 这个是sh脚本的参数还是 command 的参数
+	command: /usr/bin/make_database.sh arg1 arg2 creates=/path/to/database
+	
+	你可以选择写成这样
+	  command: /usr/bin/make_database.sh arg1 arg2
+	  args:
+	    chdir: somedir/
+	    creates: /path/to/database
+
+
+## shell ##
+执行一个shell命令  
+支持 chdir creates removes 参数  
+executable 可以用于选择sh程序  
+
+	注意 somescript.sh 这个是远程的文件, shell这个模块本身的参数可以通过args传入, 注意不要和shell命令的参数搞混
+	- name: This command will change the working directory to somedir/ and will only run when somedir/somelog.txt doesn't exist.
+	  shell: somescript.sh >> somelog.txt
+	  args:
+	    chdir: somedir/
+	    creates: somelog.txt
+		executable: /bin/bash #这里修改成bash, 话说默认是sh么?
+	
+	下面这个例子搭配 delegate_to 使用, 因此其实下面的shell命令是在本机(ansible发起者)执行, 但是里面的变量是远程主机的
+	- name: Run expect to wait for a successful PXE boot via out-of-band CIMC
+	  shell: |
+	    set timeout 300
+	    spawn ssh admin@{{ cimc_host }}
+	
+	    expect "password:"
+	    send "{{ cimc_password }}\n"
+	
+	    expect "\n{{ cimc_name }}"
+	    send "connect host\n"
+	
+	    expect "pxeboot.n12"
+	    send "\n"
+	
+	    exit 0
+	  args:
+	    executable: /usr/bin/expect
+	  delegate_to: localhost
+
+
+
+## fail ##
+引发一个失败  
+msg=失败的原因
+
+## pip ##
+## easy_install ##
+
+## 辅助类模块 ##
+
+http://docs.ansible.com/ansible/latest/modules/list_of_utilities_modules.html
+
+
+## openssl系列 ##
+
+### openssl_privatekey ###
+生成 openssl 的key
+话说 openssl 与 openssh 的区别是什么
+
+	- openssl_privatekey:
+	    path: /etc/ssl/private/ansible.com.pem
+	    passphrase: 123456
+		type: RSA
+		size: 4096
+		force: true
+
+### openssl_publickey  ###
+从一个私钥里产生公钥
+
+
+
+# ansible-playbook #
+
+## 命令选项 ##
+-i 指定hosts文件
+-f 并发数, 默认是5
+--list-hosts 列出本次将会执行的hosts
+--syntax-check
+
+
+# 杂 #
+
+可以使用下面的语法 导入多个playbook
+```
+
+	---
+	- import_playbook: webservers.yml
+	- import_playbook: databases.yml
+
+
+```
+
+## import和include ##
+>If you use any import* Task (import_playbook, import_tasks, etc.), it will be static. If you use any include* Task (include_tasks, include_role, etc.), it will be dynamic.
+
+
+TODO import 与 include 的区别是什么
+
+导入其他tasks, 并且传递参数
+```
+tasks:
+- import_tasks: wordpress.yml
+  vars:
+    wp_user: timmy
+- import_tasks: wordpress.yml
+  vars:
+    wp_user: alice
+- import_tasks: wordpress.yml
+  vars:
+    wp_user: bob
+```
+
+```
+tasks:
+- include_tasks: wordpress.yml
+  vars:
+    wp_user: timmy
+    ssh_keys:
+    - "{{ lookup('file', 'keys/one.pub') }}"
+    - "{{ lookup('file', 'keys/two.pub') }}"
+```
+
+imoprt和include也可以用于handlers
+```
+
+handlers:
+- include_tasks: more_handlers.yml
+# or
+- import_tasks: more_handlers.yml
+- 
+```
+
+角色内被包含
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html
+
+运行时通过 --extra-vars 传递额外参数
+
+- --extra-vars "version=1.23.45 other_variable=foo"
+- --extra-vars "@some_file.json"
+- --extra-vars '{"version":"1.23.45","other_variable":"foo"}'
+
+## 2.5之后引入的测试语法 ##
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_tests.html
+
+可以用于测试某情况是否发生
+
+- 文件是否存在
+- 路径是文件/目录
+- 执行成功失败
+
+
+## 自定义facts ##
+需要通过自定义模块实现
+
+
+## fact 缓存 ##
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html
+
+## 常用变量 ##
+hostvars 所有主机
+groups 所有组
+groups['app'] 的结果是一个 host 的list
+
+group_names 所有组名
+
+inventory_hostname 写在发起者的hosts文件里的名字
+ansible_hostname fact发现的名字
+
+变量优先级  
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html
+
+
+## play可以包含的元素 ##
+hosts
+vars
+vars_files
+tasks
+roles
+remote_user
+
+
+## lookup ##
+lookup允许你访问外部的变量
+
+TODO 语法
+
+
+# 条件 #
+在task里使用when语句
+
+	- import_tasks: tasks/sometasks.yml
+	  when: "'reticulating splines' in output"
+
+
+
+或在playbook里
+
+	- hosts: webservers
+	  roles:
+	     - { role: debian_stock_config, when: ansible_os_family == 'Debian' }
+
+# play可以有的参数 #
+
+- hosts 选择主机
+- vars, 是一个obj, key/value对
+- var_files, 是一个数组, 可以导入导入多个var文件
+- roles
+- environment 设置环境变量
+- become
+- tasks 包含的tasks
+- any_errors_fatal 任何主机的任何一个失败会导致总体立即失败
+
+# task可以使用的参数 #
+
+- name
+- loop 指定一个数组, 然后可以用变量item来代替它的每一项
+- when 接受一个表达式, 用于判断该task是否可以执行
+- with_items
+- register 将结果注册为一个变量
+- block 用于聚合多个task
+- rescue 配合block使用, 用于捕获异常, 相当于catach
+- always 配合block使用, 相当于finally
+- run_once 限制一个task只能被执行一次, 而且只能被一台主机, 比如只有一台服务器执行更新数据库schema的操作
+- environment 用于设置环境变量
+- ignore_errors 忽略error
+- changed_when 后面接一个表达式, 用于判断本task是否"改变"了系统
+- failed_when 接受一个表达式 用于判断该task是否执行失败
+- fail 引发一个错误
+- debug, 接受var子参数
+- notify 接受一个数组表示要通知的handler
+- 模块名
+
+
+## loop例子 ##
+http://docs.ansible.com/ansible/latest/plugins/lookup.html
+
+	- name: add several users
+	  user:
+	    name: "{{ item }}"
+	    state: present
+	    groups: "wheel"
+	  loop:
+	     - testuser1
+	     - testuser2
+
+	- name: optimal yum
+	  yum:
+	    name: "{{list_of_packages}}"
+	    state: present
+	
+	- name: non optimal yum, not only slower but might cause issues with interdependencies
+	  yum:
+	    name: "{{item}}"
+	    state: present
+	  loop: "{{list_of_packages}}"
+
+
+	- name: add several users
+	  user:
+	    name: "{{ item.name }}"
+	    state: present
+	    groups: "{{ item.groups }}"
+	  loop:
+	    - { name: 'testuser1', groups: 'wheel' }
+	    - { name: 'testuser2', groups: 'root' }
+	    -
+
+还有 do-until 模型  
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_loops.html
+
+用 loop_control 
+属性可以修改变量名 (不再是item)
+其子属性 pause 可以用于控制循环间隔时间
+
+
+## 异步 ##
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_async.html
+
+# dry run #
+ansible-playbook foo.yml --check
+
+# debugger #
+可以在playbook和task里插入一些debugger节点
+然后以debug模式运行, 应该可以啃到更多信息
+
+# 未读 #
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_delegation.html
+通常情况下, 大部分的代码是在远程执行的, 有的时候我们也想要在本机(发起者)上执行一些代码
+比如我在机器1上打开了tomcat, 我想在本机 wait_for机器1的8080端口打开
+
+rolling update 批量大小
+可以用 serial:3 限制这个task的并发量只有3
+serial还可以接受其他参数
+
+
+delegate_to: 127.0.0.1
+用于将当天task委托给127.0.0.1执行
+127.0.0.1用于指发起者
+
+
+# docker支持 #
+
+# Role Dependencies #
+在role的 meta/main.yaml 描述依赖的橘色
+
+	---
+	dependencies:
+	  - { role: common, some_parameter: 3 }
+	  - { role: apache, apache_port: 80 }
+	  - { role: postgres, dbname: blarg, other_parameter: 12 }
+
+
+# 重复导入角色 #
+需要在角色的 meta/main.yaml 里声明
+
+allow_duplicates: true
+
+# setup模块 #
+用于收集系统信息
+如果不需要可以在playbook上用 ``gather_facts: no`` 关掉
+
+修改 ansible.cfg 为如下配置可以使用redis来缓存setup的信息
+避免每次都setup一次
+
+[defaults]
+gathering = smart
+fact_caching = redis
+fact_caching_timeout = 86400
+
+> In current embodiments, this feature is in beta-level state and the Redis plugin does not support port or password configuration, this is 
+> expected to change in the near future.
+
+> 现在的redis模式只是测试, 只能连接本次, 并且不能指定账号密码
+
+还可以用下面的配置, 将setup信息缓存在调用机本地
+
+	[defaults]
+	gathering = smart
+	fact_caching = jsonfile
+	fact_caching_connection = /path/to/cachedir
+	fact_caching_timeout = 86400
+
+# ansible全局变量 #
+{{ hostvars['test.example.com']['ansible_distribution'] }}   
+
+访问当前的主机组
+	
+	{% if 'webserver' in group_names %}
+	   # some part of a configuration file that only applies to webservers
+	{% endif %}
+
+访问所有组
+
+	{% for host in groups['app_servers'] %}
+	   # something that applies to all app servers.
+	{% endfor %}
+
+inventory_hostname 写在inventory文件里的该主机的名字
+ansible_hostname 由setup模块发现的hostname
+
+# jinjia语法 #
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_templating.html
+需要注意的是很多变量默认是string, 在一些判断上会出错, 记得转成int再判断
+比如 ansible_lsb.major_release|int >= 6
+
+
+
+## lookup ##
+可以从外部数据源获取数据, 比如consul etcd
+
+# 判断 #
+http://docs.ansible.com/ansible/latest/user_guide/playbooks_tests.html
+ansible支持一些用于when的判断
+
+# do-until #
+
+	- shell: /usr/bin/foo
+	  register: result
+	  until: result.stdout.find("all systems go") != -1
+	  retries: 5
+	  delay: 10
+
+# loop注册变量 #
+当loop和register一起用的时候
+
+	- shell: "echo {{ item }}"
+	  loop:
+	    - "one"
+	    - "two"
+	  register: echo
+
+	- name: Fail if return code is not 0
+	  fail:
+	    msg: "The command ({{ item.cmd }}) did not have a 0 return code"
+	  when: item.rc != 0
+	  loop: "{{ echo.results }}"
+
